conf/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8888 # Envoy will listen on host's 8888 in host mode
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                      - match:
                          prefix: "/grewal.HomeGeneral/"
                        route:
                          cluster: service_grpc
              http_filters:
                - name: envoy.filters.http.grpc_web
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                - name: envoy.filters.http.cors
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: service_grpc
      connect_timeout: 0.25s
      # Using LOGICAL_DNS when targeting 127.0.0.1
      type: LOGICAL_DNS 
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: service_grpc
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    # --- Use 127.0.0.1 when using --network=host ---
                    address: 127.0.0.1 
                    port_value: 50051

admin:
  address:
    socket_address:
      address: 0.0.0.0 # Admin will listen on host's 9901
      port_value: 9901
